--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,16 @@
 spring:
+  datasource:
+    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE;MVCC=FALSE
+    username: test
+    password: test
+    driver-class-name: org.h2.Driver
   jpa:
     properties:
       hibernate.format_sql: true
-      javax.persistence.lock.timeout: 10000
+      javax.persistence.lock.timeout: 1000
 logging:
   level:
     ROOT: INFO
-    org.springframework.transaction: TRACE
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type: TRACE
+#    org.springframework.transaction: TRACE
+#    org.hibernate.SQL: DEBUG
+#    org.hibernate.type: TRACE
